# dq-rule-onboarding-genie

./: .env  .gitignore  README.md  main.py  pyproject.toml  sessions.db
src/rule_onboarding/agents/: __init__.py  mock_rule_extraction.py  rule_deployment.py  rule_extraction.py  rule_generation.py  rule_validation.py
src/rule_onboarding/api/: backend.py  main.py
src/rule_onboarding/core/: __init__.py  dq_rule_onboarding_orchestrator.py
src/rule_onboarding/services/: mcp_server.py
src/rule_onboarding/ui/: app.py
src/rule_onboarding/utils/: logger.py
tests/: conftest.py  test_pipeline.py  test_rule_extraction_agent.py
